# haihe-agent

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  findings.md  progress.md  sitecustomize.py  task_plan.md
haiheliuyubaoyuagent-master/haihe-weather-analyzer-mcp/: .env.example  Dockerfile  REST_API_README.md  RIVER_API_README.md  WMS_VECTOR_SERVICE.md  config.ini  constants.py  diagnose_risk_api.py  draw_haihe_precip_product.py  emergency_api.py  emergency_http_server.py  emergency_intranet_sync.py  emergency_management_store.py  emergency_response_interface.py  fixed_rainfall_impact_tool.py  forecast_product_queue.py  gis_wms_sql_registry.py  haihe_mcp_tools.py  historical_same_period_rainfall_tool.py  last_month_areal_rainfall_tool.py  last_year_max_daily_rainfall_tool.py  models.py  observation_product_queue.py  official_emergency_response_status.py  pyproject.toml  rainfall_ranking_service.py  requirements.txt  rest_api.py  river_system_forecast.py  rolling_forecast_grid.py  rolling_forecast_service.py  server.py  start_all.ps1  start_backend.ps1  start_chainlit.ps1  start_geoserver_tomcat.ps1  test_downstream.py  test_fixed_rainfall_impact_propagation.py  tools.py  vector_boundary_api.py
haiheliuyubaoyuagent-master/haihe-weather-analyzer-mcp/.claude/: settings.local.json
haiheliuyubaoyuagent-master/haihe-weather-analyzer-mcp/analyzers/: RainfallAnalyzer.py  ec_process_tool.py
haiheliuyubaoyuagent-master/haihe-weather-analyzer-mcp/custom_tools/: __init__.py  flash_flood_risk_tool.py  historical_same_period_rainfall_tool.py  (+6 more)
(+392 files in other folders)
