[project]
name = "haiheliuyubaoyuagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ecmwf-opendata>=0.3.0",
    "fastapi>=0.115.0",
    "geopandas>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "rasterio>=1.4.4",
    "shapely>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]
